[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrofin-sentinel-v5"
version = "5.0.0"
description = "Multi-Agent Trading System with KARL Self-Improvement and Astro-Timing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "PROPRIETARY"}
authors = [
    {name = "asurdev", email = "mahaasur13@gmail.com"}
]
keywords = ["trading", "meta-rl", "multi-agent", "astro-timing", "kar", "amre"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "sweph>=2.10.0",
    "ta>=0.10.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.19.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.9.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "hypothesis>=6.0.0",
]
all = [
    "ccxt>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
astrofin = "orchestration.sentinel_v5:cli"
astrofin-karl = "orchestration.karl_cli:cli"
astrofin-dashboard = "web.wsgi:launch"

[tool.setuptools.packages.find]
where = ["."]
include = ["meta_rl*", "agents*", "core*", "orchestration*", "web*", "strategies*", "backtest*", "trading*", "data_provider*", "muhurtha*", "langgraph_schema*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backtest/test_metrics_agent.py", "tests/test_kepler.py", "tests/test_kepler_property.py", "tests/test_kepler_differential.py"]
addopts = "-q --tb=short"
asyncio_mode = "auto"
filterwarnings = ["ignore::SyntaxWarning"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
  | agents/_archived
  | backtest/_archived_dbs
)/
'''

[tool.ruff.lint]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008", "N802", "N803", "F401", "F811"]
fixable = ["F", "I"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B018", "F401"]
"FINAL_INTEGRATION_TEST.py" = ["F401", "F811"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
show_error_codes = true
show_column_numbers = true
pretty = true
exclude = ["agents/_archived", "backtest/_archived_dbs"]

[tool.coverage.run]
source = ["meta_rl", "agents", "core", "orchestration", "backtest", "trading"]
omit = [
    "*/_archived/*",
    "*/_archived_dbs/*",
    "*/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]